Bug 409304 - restart python3 with no confirmation does not work
Summary: restart python3 with no confirmation does not work
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: python3-backend (other bugs)
Version First Reported In: 19.04
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-29 13:44 UTC by avlas
Modified: 2019-06-30 10:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avlas 2019-06-29 13:44:45 UTC
by default restarting python 3 within cantor requires confirmation and works as expected, but if I removed confirmation in settings, it stops working

not sure other backends (e.g. python 2) are affected
Comment 1 Nikita Sirgienko 2019-06-30 07:12:20 UTC
I think, you have pressed "No" button with "Don't ask me again"
And backend restarting haven't worked, because Cantor have remember your choice.

I think, I will disable posibility to save "No, don't restart" as choice, because it haven't a lot of sense, because it just make "restart backend" button useless
Comment 2 Nikita Sirgienko 2019-06-30 07:13:27 UTC
Git commit 74e5ddad96b1959914606fccaba2db1b46b734e3 by Nikita Sirgienko.
Committed on 30/06/2019 at 07:12.
Pushed by sirgienko into branch 'Applications/19.04'.

Minor UI logic improvment
FIXED-IN: 19.04.3

M  +6    -4    src/cantor_part.cpp

https://commits.kde.org/cantor/74e5ddad96b1959914606fccaba2db1b46b734e3
Comment 3 avlas 2019-06-30 10:20:06 UTC
(In reply to Nikita Sirgienko from comment #2)
> Git commit 74e5ddad96b1959914606fccaba2db1b46b734e3 by Nikita Sirgienko.
> Committed on 30/06/2019 at 07:12.
> Pushed by sirgienko into branch 'Applications/19.04'.
> 
> Minor UI logic improvment
> FIXED-IN: 19.04.3
> 
> M  +6    -4    src/cantor_part.cpp
> 
> https://commits.kde.org/cantor/74e5ddad96b1959914606fccaba2db1b46b734e3

Excellent