Minor UI logic improvment

BUG: 409304
FIXED-IN: 19.04.3